# nivis

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  notes.md
src/: array.rs  lib.rs  main.rs  numeric.rs
tests/: integration_test.rs
www/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/src/: bootstrap.ts  index.html  index.ts
