[package]
name = "mywasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
assert_float_eq = "1.1.3"
itertools = "0.12.0"
wasm-bindgen = "0.2.89"


[dependencies.web-sys]
version = "0.3.66"
features=["console"]

[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
wasm-opt = ['-O4', '-g']
